--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -313,10 +313,25 @@ nav:
               - View Services Overview: services/omvs/index.md
               - Glossary Author View: services/omvs/glossary-author.md # ./open-metadata-implementation/view-services/glossary-author-view/docs
       - Frameworks:
-          - Audit Logging (ALF): frameworks/alf.md # ./open-metadata-implementation/frameworks/audit-log-framework/docs
-          - Open Connectors (OCF): frameworks/ocf.md # ./open-metadata-implementation/frameworks/open-connector-framework/docs
-          - Open Discovery (ODF): frameworks/odf.md # ./open-metadata-implementation/frameworks/open-discovery-framework/docs
-          - Governance Actions (GAF): frameworks/gaf.md # ./open-metadata-implementation/frameworks/governance-action-framework/docs
+          - Audit Logging:
+              - Audit Log Framework (ALF): frameworks/alf/index.md
+          - Open Connectors:
+              - Open Connector Framework (OCF): frameworks/ocf/index.md
+          - Open Discovery:
+              - Open Discovery Framework (ODF): frameworks/odf/index.md
+          - Governance Actions:
+              - Governance Action Framework (GAF): frameworks/gaf/index.md
+              - Watchdog Governance Service: frameworks/gaf/watchdog-governance-service.md
+              - Verification Governance Service: frameworks/gaf/verification-governance-service.md
+              - Triage Governance Service: frameworks/gaf/triage-governance-service.md
+              - Remediation Governance Service: frameworks/gaf/remediation-governance-service.md
+              - Provisioning Governance Service: frameworks/gaf/provisioning-governance-service.md
+              - Governance Action: frameworks/gaf/governance-action.md # Move from here down to concepts?
+              - Governance Action Process: frameworks/gaf/governance-action-process.md
+              - Governance Action Type: frameworks/gaf/governance-action-type.md
+              - Guard: frameworks/gaf/guard.md
+              - Incident Report: frameworks/gaf/incident-report.md
+              - Governance Pack: frameworks/gaf/governance-pack.md
       - Concepts:
           - General Concepts: basic-concepts.md
           - Egeria Concepts:
