Migrates Crux connector docs
Signed-off-by: Christopher Grote <chris@thegrotes.net>

--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -120,7 +120,10 @@ nav:
           - Repository:
               - Repository Connectors: connectors/repository/index.md
               - Pluggable Repositories:
-                  - Crux OMRS Repository Connector: connectors/repository/crux/index.md
+                  - Crux:
+                      - Crux OMRS Repository Connector: connectors/repository/crux/index.md
+                      - Upgrading the Crux Connector: connectors/repository/crux/upgrade.md
+                      - Crux Connector Performance: connectors/repository/crux/performance.md
                   - JanusGraph OMRS Repository Connector: connectors/repository/janus-graph/index.md
                   - In-memory OMRS Repository Connector: connectors/repository/in-memory/index.md
                   - Read-only OMRS Repository Connector: connectors/repository/read-only/index.md
